istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:

  name: aspnetcore-virtualservice
spec:
  hosts:
  - "nextcloud.max-hoch.de"
  gateways:
  - nextcloud-gw
  http:
  - route:
    - destination:
        host: goexamplereposervice
      weight: 50
    - destination:
        host: goexamplemain
      weight: 50
