istio/vs2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:

  name: goexamplemain
spec:
  hosts:
  - "goexamplemain"
  http:
  - route:
    - destination:
        host: goexamplemain
      weight: 50
    - destination:
        host: goexamplefrontendservice
      weight: 50
